# yaledb

./: .gitignore  LICENSE  README.md
crates/rocksdb-fileformat/: Cargo.toml
crates/rocksdb-fileformat/examples/: sst_writer_example.rs
crates/rocksdb-fileformat/fixtures/: .gitignore  Makefile  README.md  generate_fixtures  generate_fixtures.cpp  metadata.json
crates/rocksdb-fileformat/fixtures/sst_files/: format_v5.sst  format_v6.sst  format_v7.sst
crates/rocksdb-fileformat/fixtures/sst_files/v5/: v5_crc32c_lz4.sst  v5_crc32c_none.sst  v5_crc32c_snappy.sst  v5_crc32c_snappy_dump.txt  v5_crc32c_zstd.sst  v5_nocsum_lz4.sst  v5_nocsum_none.sst  v5_nocsum_snappy.sst  v5_nocsum_zstd.sst  v5_xxh3_lz4.sst  v5_xxh3_none.sst  v5_xxh3_snappy.sst  v5_xxh3_zstd.sst  v5_xxhash64_lz4.sst  v5_xxhash64_none.sst  v5_xxhash64_snappy.sst  v5_xxhash64_snappy_dump.txt  v5_xxhash64_zstd.sst  v5_xxhash_lz4.sst  v5_xxhash_none.sst  v5_xxhash_snappy.sst  v5_xxhash_zstd.sst
crates/rocksdb-fileformat/fixtures/sst_files/v6/: v6_crc32c_lz4.sst  v6_crc32c_none.sst  v6_crc32c_snappy.sst  v6_crc32c_snappy_dump.txt  v6_crc32c_zstd.sst  v6_nocsum_lz4.sst  v6_nocsum_none.sst  v6_nocsum_snappy.sst  v6_nocsum_zstd.sst  v6_xxh3_lz4.sst  v6_xxh3_none.sst  v6_xxh3_snappy.sst  v6_xxh3_zstd.sst  v6_xxhash64_lz4.sst  v6_xxhash64_none.sst  v6_xxhash64_snappy.sst  v6_xxhash64_snappy_dump.txt  (+5 more)
crates/rocksdb-fileformat/src/: block_builder.rs  block_handle.rs  compression.rs  data_block.rs  error.rs  footer.rs  index_block.rs  iterator.rs  lib.rs  sst_file_writer.rs  sst_reader.rs  types.rs
(+25 files in other folders)
